# spectralanalysis

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  configure.sh  gendocs.sh  run.sh
src/: material.hpp  spectralanalysis.cpp
src/moremath/: Chebyshev.cpp  Chebyshev.hpp  Constants.hpp  Dawson.cpp  Dawson.hpp  Faddeeva.cpp  Faddeeva.hpp  dawson.cpp  dawson.hpp
src/oscillators/: constants.hpp  drude.cpp  drude.hpp  gaussian.cpp  gaussian.hpp  genosc.cpp  genosc.hpp  harmonic.cpp  harmonic.hpp  lorentz.cpp  lorentz.hpp  poles.cpp  poles.hpp  types.hpp
